<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingStart="18dp"
    android:paddingLeft="18dp"
    android:paddingTop="18dp"
    android:paddingRight="18dp"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/headText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hitung_luas_dan_keliling"
        android:textAlignment="center"
        android:textSize="19sp"
        android:textStyle="bold" />

    <Space
        android:layout_width="match_parent"
        android:layout_height="16dp" />

    <TextView
        android:id="@+id/firstData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/first_data"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editFirst"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/panjang_alas_diameter"
        android:inputType="number"
        android:textSize="16sp" />

    <Space
        android:layout_width="382dp"
        android:layout_height="11dp" />

    <TextView
        android:id="@+id/secondData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/second_data"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editSecond"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/lebar_tinggi"
        android:inputType="number"
        android:textSize="16sp" />

    <Space
        android:layout_width="385dp"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/hitung"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hitung"
        android:textSize="18sp" />

    <Button
        android:id="@+id/buttonPersegi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/persegi"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonSegitiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/segitiga"
        android:textSize="15sp" />

    <Button
        android:id="@+id/buttonLingkaran"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/lingkaran" />

    <Space
        android:layout_width="382dp"
        android:layout_height="28dp" />

    <TextView
        android:id="@+id/hasil"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/hasil_perhitungan"
        android:textSize="18sp" />

    <Space
        android:layout_width="383dp"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/luas"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/luas"
        android:textSize="16sp" />

    <Space
        android:layout_width="382dp"
        android:layout_height="13dp" />

    <TextView
        android:id="@+id/keliling"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="sans-serif-medium"
        android:text="@string/keliling"
        android:textSize="16sp" />

</LinearLayout>